--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -17,14 +17,18 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <ProgressBar Height="10" VerticalAlignment="Bottom" Margin="5">
+            <Label x:Name="l1" Content="Loading..." VerticalAlignment="Bottom" Margin="0, 0, 0, 10"/>
+
+            <TextBox x:Name="gunaTextBox1" Text="Game_Nik" LostFocus="TextBox_OnLostFocus" Width="200" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0"/>
+
+            <ProgressBar x:Name="gunaProgressBar1" Height="10" VerticalAlignment="Bottom" Margin="5">
                 <ProgressBar.Resources>
                     <Style TargetType="Border">
                         <Setter Property="CornerRadius" Value="2"/>
                     </Style>
                 </ProgressBar.Resources>
             </ProgressBar>
-
+            
             <Button x:Name="Btn_Play" Grid.Column="1" Height="100" VerticalAlignment="Bottom" Content="Play" FontSize="40" Click="Btn_Play_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
