--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -18,8 +18,18 @@
             </Grid.ColumnDefinitions>
 
             <Label x:Name="l1" Content="Loading..." VerticalAlignment="Bottom" Margin="0, 0, 0, 10"/>
-
-            <TextBox x:Name="gunaTextBox1" Text="Game_Nik" LostFocus="TextBox_OnLostFocus" Width="200" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label Padding="0" Height="20" VerticalAlignment="Center" VerticalContentAlignment="Bottom" HorizontalAlignment="Center" Grid.Column="0" Content="Ваш Ник" FontSize="13" FontWeight="Bold"/>
+                <TextBox Grid.Column="1" x:Name="gunaTextBox1" Text="Game_Nik" Margin="0, 5, 0, 0" LostFocus="TextBox_OnLostFocus" Width="120" Height="20" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+            </Grid>
 
             <ProgressBar x:Name="gunaProgressBar1" Height="10" VerticalAlignment="Bottom" Margin="5">
                 <ProgressBar.Resources>
@@ -28,7 +38,7 @@
                     </Style>
                 </ProgressBar.Resources>
             </ProgressBar>
-            
+
             <Button x:Name="Btn_Play" Grid.Column="1" Height="100" VerticalAlignment="Bottom" Content="Play" FontSize="40" Click="Btn_Play_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
