--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -39,10 +39,10 @@
                 </ProgressBar.Resources>
             </ProgressBar>
 
-            <Button x:Name="Btn_Play" Grid.Column="1" Height="100" VerticalAlignment="Bottom" Content="Play" FontSize="40" Click="Btn_Play_Click">
+            <Button x:Name="Btn_Play" IsEnabled="True" Grid.Column="1" Height="100" VerticalAlignment="Bottom" Content="Play" FontSize="40" Click="Btn_Play_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="20, 0, 0, 0"/>
+                        <Setter Property="CornerRadius" Value="20, 0, 10, 0"/>
                     </Style>
                     <Style TargetType="Button">
                         <Setter Property="Background" Value="#C18402"/>
