--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -17,7 +17,7 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Label x:Name="l1" Content="Loading..." VerticalAlignment="Bottom" Margin="0, 0, 0, 10"/>
+            <Label x:Name="l1" Content="" VerticalAlignment="Bottom" Margin="0, 0, 0, 10"/>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
@@ -27,8 +27,8 @@
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Label Padding="0" Height="20" VerticalAlignment="Center" VerticalContentAlignment="Bottom" HorizontalAlignment="Center" Grid.Column="0" Content="Ваш Ник" FontSize="13" FontWeight="Bold"/>
-                <TextBox Grid.Column="1" x:Name="gunaTextBox1" Text="Game_Nik" Margin="0, 5, 0, 0" LostFocus="TextBox_OnLostFocus" Width="120" Height="20" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                <Label Padding="0" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="Ваш Ник" FontSize="16" FontWeight="Bold"/>
+                <TextBox Grid.Column="1" x:Name="gunaTextBox1" FontSize="16" Text="Game_Nik" Margin="0, 0, 0, 0" LostFocus="TextBox_OnLostFocus" Width="130" Height="30" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
             </Grid>
 
             <ProgressBar x:Name="gunaProgressBar1" Height="10" VerticalAlignment="Bottom" Margin="5">
