--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -18,7 +18,7 @@
             </Grid.ColumnDefinitions>
 
             <Label x:Name="l1" Content="" VerticalAlignment="Bottom" Margin="0, 0, 0, 10"/>
-            <Grid Height="30" VerticalAlignment="Top">
+            <Grid Margin="0, 10, 0, 0" Height="30" VerticalAlignment="Top">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition />
@@ -28,7 +28,19 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Label Padding="0" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="Ваш Ник" FontSize="16" FontWeight="Bold"/>
-                <TextBox Grid.Column="1" x:Name="gunaTextBox1" FontSize="16" Text="Game_Nik" Margin="0, 0, 0, 0" LostFocus="TextBox_OnLostFocus" Width="130" Height="30" VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBox Grid.Column="1" x:Name="gunaTextBox1" HorizontalContentAlignment="Center" FontSize="16" Text="Game_Nik" Margin="0, 0, 0, 0" LostFocus="TextBox_OnLostFocus" Width="130" Height="30" VerticalContentAlignment="Center" HorizontalAlignment="Left">
+                    <TextBox.Effect>
+                        <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" ShadowDepth="2"/>
+                    </TextBox.Effect>
+                    <TextBox.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="7"/>
+                        </Style>
+                        <Style TargetType="TextBox">
+                            <Setter Property="Background" Value="#FDC16A" />
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
             </Grid>
 
             <ProgressBar x:Name="gunaProgressBar1" Height="10" VerticalAlignment="Bottom" Margin="5">
@@ -40,6 +52,9 @@
             </ProgressBar>
 
             <Button x:Name="Btn_Play" IsEnabled="True" Grid.Column="1" Height="100" VerticalAlignment="Bottom" Content="Play" FontSize="40" Click="Btn_Play_Click">
+                <Button.Effect>
+                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" ShadowDepth="-5"/>
+                </Button.Effect>
                 <Button.Resources>
                     <Style TargetType="Border">
                         <Setter Property="CornerRadius" Value="20, 0, 10, 0"/>
