--- a/Viwes/Pages/MainPage.xaml
+++ b/Viwes/Pages/MainPage.xaml
@@ -26,6 +26,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Label Padding="0" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="Ваш Ник" FontSize="16" FontWeight="Bold"/>
                 <TextBox Grid.Column="1" x:Name="gunaTextBox1" HorizontalContentAlignment="Center" FontSize="16" Text="Game_Nik" Margin="0, 0, 0, 0" LostFocus="TextBox_OnLostFocus" Width="130" Height="30" VerticalContentAlignment="Center" HorizontalAlignment="Left">
@@ -41,6 +42,40 @@
                         </Style>
                     </TextBox.Resources>
                 </TextBox>
+
+                <Button x:Name="Btn_2" Grid.Column="2" Content="Переустоновить сборку" FontSize="16" Click="Btn_2_Click">
+                    <Button.Effect>
+                        <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" ShadowDepth="2"/>
+                    </Button.Effect>
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="10"/>
+                        </Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#FDC16A"/>
+
+
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border Background="{TemplateBinding Background}" BorderBrush="#0000" BorderThickness="0">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+
+                            <Style.Triggers>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="Background" Value="#FDC16A"/>
+                                </Trigger>
+                            </Style.Triggers>
+
+
+
+                        </Style>
+                    </Button.Resources>
+                </Button>
             </Grid>
 
             <ProgressBar x:Name="gunaProgressBar1" Height="10" VerticalAlignment="Bottom" Margin="5">
